--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 		<!-- Log4j2爆雷漏洞 -->
 		<log4j2.version>2.17.0</log4j2.version>
 		<logback.version>1.2.9</logback.version>
+		
+
+  		<sonar.organization>staticcode</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 	</properties>
 
 	<modules>
